--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ project(Panorama2Cubemap C CXX)
 find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories("${PROJECT_BINARY_DIR}")
 link_directories(/home/flo/Workspace/darknet)
 
-add_executable(Panorama2Cubemap main.cpp)
+add_executable(Panorama2Cubemap main.cpp opencv_detect.cpp cubetransform.cpp)
 
 target_link_libraries(Panorama2Cubemap -lm -lpthread -ldarknet ${OpenCV_LIBS})
