Include libdarknet again for performance reasons. Perform NMS on darknet bounding boxes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories("${PROJECT_BINARY_DIR}")
 link_directories(/home/flo/Workspace/darknet)
 
-add_executable(Panorama2Cubemap main.cpp opencv_detect.cpp cubetransform.cpp)
+add_executable(Panorama2Cubemap main.cpp opencv_detect.cpp cubetransform.cpp detect.cpp detect.h)
 
 target_link_libraries(Panorama2Cubemap -lm -lpthread -ldarknet ${OpenCV_LIBS})
