Multi tracker initialized with darknet predictions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ link_directories(/home/flo/Workspace/darknet)
 
 
 add_executable(Panorama2Cubemap main.cpp opencv_detect.cpp
-        cubetransform.cpp detect.cpp detect.h tracking.cpp)
+        cubetransform.cpp cubetransform.h detect.cpp detect.h tracking.cpp)
 
 target_link_libraries(Panorama2Cubemap -lm -lpthread -ldarknet ${OpenCV_LIBS})
