Restrucuring of ProjectFolder setup

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@ cmake-build-debug/*
 goturn.caffemodel
 goturn.prototxt
 
+#MaskRCNN Zeug
+Detectors/mask_rcnn_inception_v2_coco_2018_01_28/
+
+
 *.mp4
+*.avi
 
 
 # Generated files
