--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,6 @@ link_directories(/usr/local/cuda/lib64)
 
 
 add_executable(Panorama2Cubemap main.cpp Detectors/opencv_detect.cpp
-        cubetransform.cpp cubetransform.h Detectors/detect.cpp Detectors/detect.h RegionTracker/tracking.cpp OtherTracking/opencv_tracking.cpp OtherTracking/opencv_tracking.h OtherTracking/PanoramaTracking.cpp OtherTracking/PanoramaTracking.h OtherTracking/PanoramaTrackingImplementations.cpp OtherTracking/PanoramaTrackingImplementations.h RegionTracker/TrackingHelpers.h Detectors/testMaskRCNN.cpp Detectors/testMaskRCNN.h RegionTracker/TrackingHelpers.cpp)
+        cubetransform.cpp cubetransform.h Detectors/detect.cpp Detectors/detect.h RegionTracker/tracking.cpp OtherTracking/opencv_tracking.cpp OtherTracking/opencv_tracking.h OtherTracking/PanoramaTracking.cpp OtherTracking/PanoramaTracking.h OtherTracking/PanoramaTrackingImplementations.cpp OtherTracking/PanoramaTrackingImplementations.h RegionTracker/TrackingHelpers.h Detectors/testMaskRCNN.cpp Detectors/testMaskRCNN.h RegionTracker/TrackingHelpers.cpp misc_utility.cpp misc_utility.h)
 
 target_link_libraries(Panorama2Cubemap -lm -lpthread -ldarknet ${OpenCV_LIBS} -L/usr/local/lib -lxml2 -lz -lm)
